# tradebot-public

./: .env  .env.example  .gitignore  README.md  VERSION  config.json  pyproject.toml
.github/workflows/: sync-to-gitlab.yml
Documentation/: ADDITIONAL_CONFLICTS_CHATGPT.md  AI_CHALLENGE_DISSERTATION.md  AI_HANDOFF_GUILLOTINE_SAR.md  AI_HANDOFF_HOLD_GUARD.md  AI_HANDOFF_MONITORING.md  AI_HANDOFF_PROMPT.md  AI_HANDOFF_PYRAMIDING_SLIDERS.md  AI_HANDOFF_UNIVERSAL_EXIT.md  ANALYTICS_IMPLEMENTATION_PLAN.md  APOLOGY_TO_THE_AUDITOR.md  AUDITOR_QUESTIONS.md  AUDITOR_RESPONSES.md  AUDIT_LATEST_INSUFFICIENT_FUNDS.md  AUTO_LIQUIDITY_PROTOCOL.md  BACKTESTER_RULES.md  BACKTESTER_STOP_LOGIC_GUIDE.md  BLOCKING_ISSUES_SUMMARY.md  BOT_MONITORING_REPORT_12-35.md  CHANGELOG_LAST_24H.md  CLAUDE_QWEN_DEBATE_REJECTION_RATE.md  COMPLETE_PNL_ANALYSIS_WITH_APOLOGY.md  CONFIGURATION_CONFLICTS_ANALYSIS.md  CONTINUATION_GATE_BLOCKING_ANALYSIS.md  CRITICAL_BUG_PHANTOM_POSITIONS_RETURN.md  CRITICAL_CONFIG_BUG_REPORT.md  CRITICAL_NEW_BUG_13-06.md  DEBUG_SUMMARY.md  FINAL_STATUS_13-36.md  GUI_AUDIT_REPORT.md  GUI_AUDIT_REPORT_FINAL.md  GUI_POSITION_DISPLAY_ANALYSIS.md  HOW_TO_USE.md  History.md  ICC_AUDIT_ADDENDUM.md  ICC_AUDIT_REPORT.md  ICC_AUDIT_REPORT_FINAL.md  ICC_AUDIT_REPORT_FOLLOWUP.md  ICC_GAP_ANALYSIS.md  IMPLEMENTATION_PLAN_MULTI_STRATEGY.md  LOGGING_ISSUES_ADDENDUM.md  (+36 more)
Documentation/Instructions/: AI_HANDOFF_STATUS.md  GEMINI_BATON_PASS.md  GEMINI_BUG_FIXES_REQUIRED.md  GEMINI_FINAL_BUG_FIX.md  GEMINI_FIX_PHANTOM_POSITIONS.md  GEMINI_FLATTEN_INSTRUCTIONS.md  GEMINI_GUIDANCE_ICC_TRADING.md  GEMINI_INCOMPLETE_FLATTEN.md  GEMINI_RESTORE_REJECTION_RATE.md  ICC_EXIT_STRATEGY_GUIDE.md
Documentation/RTFM/: 01_PHILOSOPHY.md  02_SKELETON_ARCH.md  02_WHY_TRADEBOT_SCI.md  03_FUNCTIONS_DATA.md  03_THE_ANCIENT_OATHS.md  04_MAP_TOC.md  04_NOT_A_MONEY_PRINTER.md  05_COOKBOOK.md  05_MONEY_PSYCHOLOGY.md  06_DEATH_SPIRAL_DIARIES.md  06_PANIC_BUTTON.md  07_ALLERGIC_TO_MONEY.md  07_COCKPIT_CONTROLS.md  08_ACCOUNTING_PHYSICS.md  08_API_SETUP.md  08_GHOST_IN_MACHINE.md  (+96 more)
config/: settings_base.yaml  settings_profiles.yaml
gui/: index.html  package.json  renderer.js  settings.js  settings_integrated.js  window-state.json
scripts/: calc_payout.py  codex  debug_candle_latency.py  deploy.sh  diag_oanda.py  gemini  install.sh  install_mt5_bridge.sh  invoke_codex.sh  monitor_pyramids.sh  publish_folder.sh  publish_mirror.sh  run_codex.sh  run_dev_bot.py  run_friday_backtest.py  run_gemini.sh  run_profit_analysis.sh  run_tmux_dashboard.sh  start_monitoring.sh  start_mt5.bat  start_mt5.sh  test_multi_strategy.py  tradebot.sh  tradebot_gui.py  tradebot_watchdog.py  windows_installer.ps1
src/: test_capital.py  test_run_bot.py
tools/: ai_helper.py  analyze_14day_rr.py  analyze_continuation.py  analyze_crypto_hourly.py  analyze_icc_detection.py  analyze_missed_trades.py  analyze_nov_2024.py  analyze_score_patterns.py  analyze_trade_patterns.py  analyze_winning_patterns.py  ask_qwen_pnl.py  ask_qwen_timeframe.py  audit_all_pairs.py  audit_all_strategies.py  audit_all_strategies_crypto.py  backfill_history.py  backtest_crypto_hours.py  cancel_zombies.py  candles_ccxt_ui.py  candles_ibkr_ui.py  candles_launcher.py  capital_risk_study.py  chart_debug.html  check_all_balances.py  check_atr_debug.py  check_btc_min.py  check_coinbase_accounts.py  check_coinbase_balance.py  check_conid.py  check_currency.py  check_dust_limits.py  check_futures_products.py  check_gemini_active.py  check_hours.py  check_import.py  check_margin_reqs.py  check_min_quantities.py  check_portfolio_types.py  check_sys_path.py  check_xrp_position.py  (+176 more)
(+335 files in other folders)
